更改了组织拼写错误。添加组织在导航器菜单

--- a/src/main/webapp/js/themes/icon.css
+++ b/src/main/webapp/js/themes/icon.css
@@ -94,3 +94,15 @@
 .icon-large-chart{
 	background:url('icons/large_chart.png') no-repeat center center;
 }
+
+.icon-organization{
+	background:url('icons/organization.gif') no-repeat center center;
+}
+
+.icon-view-list{
+	background:url('icons/view_list.png') no-repeat center center;
+}
+
+.icon-node{
+	background:url('icons/node.png') no-repeat center center;
+}
