更新了db信息，演示系统信息一致，已经创建在演示系统本机有权限的同名账号

--- a/src/main/webapp/js/themes/icon.css
+++ b/src/main/webapp/js/themes/icon.css
@@ -106,3 +106,7 @@
 .icon-node{
 	background:url('icons/node.png') no-repeat center center;
 }
+
+.icon-arrow-down{
+	background:url('icons/arrow_down.png') no-repeat center center;
+}
